--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,15 @@
 {
   "version": 2,
-  "builds": [{ "src": "main.ts", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "/main.ts" }]
+  "builds": [
+    {
+      "src": "src/main.ts",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "src/main.ts"
+    }
+  ]
 }
